refactor: fix ZeebeRocksDbFactory signature in tests.